Updated label marker and tried to debug the empty image set not skipping problem

--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -32,7 +32,12 @@
     transform: translate(-50%, -50%);
     z-index: 1;
     border-radius: 50%;
-    /* transition: all 0.3s ease-in-out; */
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out; 
+  }
+
+  .label-marker.visible {
+    opacity: 1;
   }
 
 
