--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -33,7 +33,7 @@
     z-index: 1;
     border-radius: 50%;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out; 
+    transition: all 0.3s ease-in-out; 
   }
 
   .label-marker.visible {
