--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -47,3 +47,15 @@
     overflow: hidden;
 
   }
+
+  .tooltip {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 6px;
+    transform: translate(-50%, -150%);
+    white-space: nowrap;
+    z-index: 10;
+    margin-bottom: 24px;
+  }
