--- a/src/components/TextQuestion.css
+++ b/src/components/TextQuestion.css
@@ -1,10 +1,11 @@
 .question-container {
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     align-items: center;
     position: relative;
     margin: auto;
     width: 90vw;
+    max-height: 100vh;
   }
 
   .question-content {
