--- a/src/components/DraggableQuestion.css
+++ b/src/components/DraggableQuestion.css
@@ -47,3 +47,25 @@
 #difficult{
   color: #d0587e;
 }
+
+.tooltip {
+  position: absolute;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transform: translate(140%, 0%);
+  z-index: 1000;
+  max-width: 400px;
+}
+
+.tooltip img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.draggable-option-container {
+  position: relative;
+}
