Changed aspect ratio

--- a/src/survey/ImageSelection/ImageSelection.css
+++ b/src/survey/ImageSelection/ImageSelection.css
@@ -5,7 +5,7 @@
   cursor: pointer; /* Change cursor to pointer on hover */
   overflow: hidden;
   border-radius: 0.75em;
-  height: 50vh;
+  /* height: 50vh; */
 }
 
 .image-and-selection-buttons {
