--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -1,7 +1,7 @@
 /* ImageComponent.css */
 
 .crop-image {
-  aspect-ratio: 5 / 3; 
+  /* aspect-ratio: 5 / 3;  */
   width: 100%;
   height: 100%;
   object-fit: cover;
