--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -1,7 +1,7 @@
 /* ImageComponent.css */
 
 .crop-image {
-  /* aspect-ratio: 5 / 3;  */
+  aspect-ratio: 3 / 2; 
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -9,10 +9,10 @@
 
 .label-marker {
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 1.5vw;
+  height: 1.5vw;
   background-color: #EF6074;
-  border: 3px solid #fff;
+  border: 0.25vw solid #fff;
   mix-blend-mode: hard-light;
   top: 50%;
   left: 50%;
@@ -41,7 +41,7 @@
 
 .image-component-container {
   width: 100%;
-  border-radius: 0.5em;
+  border-radius: 0.5rem;
   overflow: hidden;
   position: relative; /* Ensure relative positioning for tooltip */
 }
