--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -9,10 +9,10 @@
 
 .label-marker {
   position: absolute;
-  width: 1.5vw;
-  height: 1.5vw;
+  width: 1em;
+  height: 1em;
   background-color: #EF6074;
-  border: 0.25vw solid #fff;
+  border: 0.15em solid #fff;
   mix-blend-mode: hard-light;
   top: 50%;
   left: 50%;
