--- a/src/components/DraggableQuestion.css
+++ b/src/components/DraggableQuestion.css
@@ -52,8 +52,8 @@
   position: absolute;
   background-color: #ffffff;
   border: 1px solid #ccc;
-  padding: 8px;
-  border-radius: 4px;
+  padding: 0.1em;
+  border-radius: 0.1em;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   transform: translate(140%, 0%);
   z-index: 1000;
