--- a/src/components/PageNavigations.css
+++ b/src/components/PageNavigations.css
@@ -6,7 +6,7 @@
     align-items: center;
     gap: 2px; 
     /* z-index: 10; */
-    border-radius: 4px;
+    border-radius: 0.2em;
     overflow: hidden;
   }
   
