--- a/src/survey/ImageComaprison/ImageComparison.css
+++ b/src/survey/ImageComaprison/ImageComparison.css
@@ -3,14 +3,14 @@
   margin: 1rem; 
   width: 45%;
   cursor: pointer;
-  border-radius: 0.75rem;
+  border-radius: 0.75em;
   overflow: hidden;
   height: 50vh;
 }
 
 .comparison-image-wrapper:hover{
   /* add border */
-  border: 4px solid #14b8a6;
+  border: 0.4em solid #14b8a6;
 }
 
 
