--- a/src/survey/ImageSelection/ImageSelection.css
+++ b/src/survey/ImageSelection/ImageSelection.css
@@ -4,7 +4,7 @@
   margin: 1rem;
   overflow: hidden;
   height: 50vh;
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
 }
 
 .image-and-selection-buttons {
