--- a/src/survey/StartEndPages/EndingPage.css
+++ b/src/survey/StartEndPages/EndingPage.css
@@ -35,7 +35,7 @@
 .ending-page-text-container h2 {
     font-size: 1.6em;
     line-height: 1.2;
-    font-weight: 600;
+    /* font-weight: 600; */
     text-align: left;
 }
 
