--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,13 @@
   align-items: center;
   margin: 20px;
 }
+
+.image-selection{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 12px;
+  /* justify-content: center; */
+  align-items: center;
+  margin: 20px;
+}
